Switch from JNI to FFM